apps/app-proxy/overlays/vadim-local/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  name: vadim-local-cap-app-proxy
  namespace: vadim-local
spec:
  rules:
  - http:
      paths:
      - backend:
          service:
            name: cap-app-proxy
            port:
              number: 3017
        path: /app-proxy
        pathType: ImplementationSpecific
status:
  loadBalancer: {}
